# webserver

./: CMakeLists.txt  knight_veri.csv  nowa_veri_raw22.csv  rise_veri.csv  scraper.py  scraper4.py  vcpkg.json
include/: CmakeLists.txt  server.hpp
public/: index.html  knight.html  nowa.html  rise.html
public/css/: style1.css  styleknight.css  stylenowa.css  stylerise.css
public/js/: script1.js  scriptknight.js  scriptnowa.js  scriptrise.js
src/: CMakeLists.txt  main.cpp  server.cpp
